--- a/src/components/LinkButton.astro
+++ b/src/components/LinkButton.astro
@@ -8,7 +8,14 @@ export interface Props {
   openInNewTab?: boolean;
 }
 
-const { href, className, ariaLabel, title, disabled = false, openInNewTab = false } = Astro.props;
+const {
+  href,
+  className,
+  ariaLabel,
+  title,
+  disabled = false,
+  openInNewTab = false,
+} = Astro.props;
 ---
 
 <a
