feat: add waline comment component

--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -6,6 +6,8 @@ import Tag from "@components/Tag.astro";
 import Datetime from "@components/Datetime";
 import type { CollectionEntry } from "astro:content";
 import { slugifyStr } from "@utils/slugify";
+import { COMPONENTS_CFG } from "@config";
+import Comments from "@components/Comments.astro";
 
 export interface Props {
   post: CollectionEntry<"blog">;
@@ -55,6 +57,12 @@ const ogUrl = new URL(
     <ul class="tags-container">
       {tags.map(tag => <Tag name={slugifyStr(tag)} />)}
     </ul>
+
+    {
+      COMPONENTS_CFG.walineServer && (
+        <Comments walineServer={COMPONENTS_CFG.walineServer} />
+      )
+    }
   </main>
   <Footer />
 </Layout>
