refactor: extract the gtag stuffs to a componet

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import { SITE } from "@config";
 import "@styles/base.css";
 import { ViewTransitions } from "astro:transitions";
+import Gtag from "@components/Gtag.astro";
 
 const googleSiteVerification = import.meta.env.PUBLIC_GOOGLE_SITE_VERIFICATION;
 const gTagId = import.meta.env.GTAG_ID;
@@ -82,17 +83,7 @@ const socialImageURL = new URL(
       // If GTAG_ID is set in the environment variable,
       // include google gtag script in the heading
       // Learn more: https://developers.google.com/analytics/devguides/collection/gtagjs
-      gTagId && (
-        <!-- Google tag (gtag.js) -->
-        <script is:inline async src=`https://www.googletagmanager.com/gtag/js?id=${gTagId}` />
-        <script define:vars={{  gTagId }}>
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){window.dataLayer.push(arguments);}
-          gtag('js', new Date());
-
-          gtag('config', gTagId);
-        </script>
-      )
+      gTagId && <Gtag gTagId={gTagId} />
     }
 
     <ViewTransitions />
