chore: force login when leave a comment

--- a/src/components/Comments.astro
+++ b/src/components/Comments.astro
@@ -12,5 +12,6 @@ const { walineServer } = Astro.props;
   serverURL={walineServer}
   reaction
   path={Astro.url.pathname}
+  login="force"
   client:visible
 />
