--- a/src/components/PageView.astro
+++ b/src/components/PageView.astro
@@ -1,14 +1,16 @@
 ---
+/* defined in /src/pages/api/setPV.ts */
 ---
 
-<div id="pv-count"></div>
-<script>
+<span id="pv-count"></span>
+<script is:inline>
   (async () => {
-    {/* defined in /src/pages/api/setPV.ts */}
     const pvUrl = `/api/setPV?v=${window.location.pathname}`;
     const rawData = await fetch(pvUrl);
     const jsonData = await rawData.json();
-    document.querySelector("#pv-count")!.innerHTML =
-      jsonData.message + " views";
+    let ele = document.querySelector("#pv-count")
+    if (ele !== null) {
+      ele.innerHTML = jsonData.message + " views";
+    }
   })();
 </script>
