--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -50,8 +50,11 @@ const ogUrl = new URL(
   </div>
   <main id="main-content">
     <h1 transition:name={slugifyStr(title)} class="post-title">{title}</h1>
-    <Datetime datetime={pubDatetime} size="lg" className="my-2" />
-    <PageView />
+    <div style="display: flex; align-items: center;">
+      <Datetime datetime={pubDatetime} size="lg" className="my-2" />
+       &nbsp; | &nbsp;
+      <PageView />
+    </div>
     <article id="article" role="article" class="prose mx-auto mt-8 max-w-3xl">
       <Content />
     </article>
