--- a/src/components/PageView.astro
+++ b/src/components/PageView.astro
@@ -8,7 +8,7 @@
     const pvUrl = `/api/setPV?v=${window.location.pathname}`;
     const rawData = await fetch(pvUrl);
     const jsonData = await rawData.json();
-    let ele = document.querySelector("#pv-count")
+    let ele = document.querySelector("#pv-count");
     if (ele !== null) {
       ele.innerHTML = jsonData.message + " views";
     }
