--- a/src/components/Album.astro
+++ b/src/components/Album.astro
@@ -1,8 +1,15 @@
 ---
 import { Image } from "astro:assets";
-export interface Props {
-  badges: string[];
+
+export interface Badge {
+  name: string;
+  issuer: string;
+  imageUrl: string;
 }
+export interface Props {
+  badges: Badge[];
+}
+
 const { badges } = Astro.props;
 ---
 
@@ -11,11 +18,11 @@ const { badges } = Astro.props;
     badges.map(badge => (
       <div class="item">
         <div class="img-container">
-          <Image src={badge} alt="" width={100} height={100} class="img"/>
+          <Image src={badge.imageUrl} alt={badge.name} width={100} height={100} class="img"/>
         </div>
         <div class="bottom">
-          <div class="description">处理一般手sdfasdf机主题记者他们.longlonglong</div>
-          <div class="issuer">PLC</div>
+          <div class="description">{badge.name}</div>
+          <div class="issuer"><small>ISSUED BY</small> {badge.issuer}</div>
         </div>
       </div>
     ))
@@ -32,7 +39,7 @@ const { badges } = Astro.props;
   }
   .item {
     width: 10rem;
-    height: 16.8rem;
+    height: 15.8rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -48,6 +55,7 @@ const { badges } = Astro.props;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    text-align: center;
   }
   .img {
     margin: 0.5rem;
