--- a/src/components/Album.astro
+++ b/src/components/Album.astro
@@ -18,11 +18,19 @@ const { badges } = Astro.props;
     badges.map(badge => (
       <div class="item">
         <div class="img-container">
-          <Image src={badge.imageUrl} alt={badge.name} width={100} height={100} class="img"/>
+          <Image
+            src={badge.imageUrl}
+            alt={badge.name}
+            width={100}
+            height={100}
+            class="img"
+          />
         </div>
         <div class="bottom">
           <div class="description">{badge.name}</div>
-          <div class="issuer"><small>ISSUED BY</small> {badge.issuer}</div>
+          <div class="issuer">
+            <small>ISSUED BY</small> {badge.issuer}
+          </div>
         </div>
       </div>
     ))
