--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -6,9 +6,10 @@ import Main from "@layouts/Main.astro";
 import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
 import SearchBar from "@components/Search";
+import { notDraftInPROD } from "@utils/postFilter";
 
 // Retrieve all articles
-const posts = await getCollection("blog", ({ data }) => !data.draft);
+const posts = await getCollection("blog", notDraftInPROD);
 
 // List of items to search in
 const searchList = posts.map(({ data }) => ({
