--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -18,8 +18,7 @@ const { post } = Astro.props;
 
 const { title, author, description, ogImage, canonicalURL, pubDatetime, tags } =
   post.data;
-
-const { Content } = await post.render();
+const { Content, remarkPluginFrontmatter } = await post.render();
 
 const ogImageUrl = typeof ogImage === "string" ? ogImage : ogImage?.src;
 const ogUrl = new URL(
@@ -52,6 +51,8 @@ const ogUrl = new URL(
     <h1 transition:name={slugifyStr(title)} class="post-title">{title}</h1>
     <div style="display: flex; align-items: center;">
       <Datetime datetime={pubDatetime} size="lg" className="my-2" />
+       &nbsp; | &nbsp;
+      {remarkPluginFrontmatter.minutesRead}
        &nbsp; | &nbsp;
       <PageView />
     </div>
