--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -48,6 +48,14 @@
     stroke-current stroke-2 opacity-90 group-hover:fill-transparent 
     sm:scale-110;
   }
+
+  .gist tr {
+    border-bottom-width: 0;
+  }
+  .gist td {
+    border-width: 0;
+  }
+
   .prose {
     @apply prose-headings:!mb-3 prose-headings:!text-skin-base 
     prose-h3:italic prose-p:!text-skin-base 
@@ -93,11 +101,6 @@
   /* ===== scrollbar ===== */
   html {
     overflow-y: scroll;
-  }
-
-  /* width */
-  ::-webkit-scrollbar {
-    @apply w-3;
   }
 
   /* Track */
