--- a/src/pages/posts/[slug]/index.astro
+++ b/src/pages/posts/[slug]/index.astro
@@ -4,7 +4,6 @@ import Posts from "@layouts/Posts.astro";
 import PostDetails from "@layouts/PostDetails.astro";
 import getSortedPosts from "@utils/getSortedPosts";
 import getPageNumbers from "@utils/getPageNumbers";
-import slugify from "@utils/slugify";
 import { SITE } from "@config";
 import { notDraftInPROD } from "@utils/postFilter";
 
@@ -16,7 +15,7 @@ export async function getStaticPaths() {
   const posts = await getCollection("blog", notDraftInPROD);
 
   const postResult = posts.map(post => ({
-    params: { slug: slugify(post.data) },
+    params: { slug: post.slug },
     props: { post },
   }));
 
