--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -61,7 +61,7 @@ const ogUrl = new URL(
     </article>
 
     <ul class="tags-container">
-      {tags.map(tag => <Tag name={slugifyStr(tag)} />)}
+      {tags.map(tag => <Tag tag={slugifyStr(tag)} />)}
     </ul>
 
     {
