--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,7 +30,7 @@ const socialImageURL = new URL(
 ---
 
 <!doctype html>
-<html lang=`${LOCALE.lang ?? "en"}`></html>
+<html lang=`${LOCALE.lang ?? "en"}`>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
