--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 import { LOCALE, SITE } from "@config";
 import "@styles/base.css";
-import { ViewTransitions } from "astro:transitions";
+import { ClientRouter } from "astro:transitions";
 import Gtag from "@components/Gtag.astro";
 import Umami from "@components/Umami.astro";
 import AdSense from "@components/AdSense.astro";
@@ -101,7 +101,7 @@ const socialImageURL = new URL(
     }
     {adSenseId && <AdSense id={adSenseId} />}
 
-    <ViewTransitions />
+    <ClientRouter />
 
     <script is:inline src="/toggle-theme.js"></script>
   </head>
